--- a/source/less/blocks/companions.less
+++ b/source/less/blocks/companions.less
@@ -2,7 +2,9 @@
   background-image: url("../../img/backgrounds/companions-mobile.png");
   background-repeat: no-repeat;
   background-color: @basic-blue-other;
+}
 
+.companions__wrapper {
   @media (min-width: @tablet-width) {
     padding: 208px 74px 87px;
   }
