--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,14 +1,4 @@
 .page-main__section {
-  padding: 71px 25px 34px;
-
-  @media (min-width: @tablet-width) {
-    padding: 73px 40px 80px;
-  }
-
-  @media (min-width: @desktop-width) {
-    padding: 161px 131px 134px;
-  }
-
   &--top {
     color: @white;
     background-color: @basic-blue-other-dark;
@@ -66,6 +56,18 @@
 
   @media (min-width: @desktop-width) {
     border-radius: 0 0 58px 58px;
+  }
+}
+
+.page-main__wrapper {
+  padding: 71px 25px 34px;
+
+  @media (min-width: @tablet-width) {
+    padding: 73px 40px 80px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 161px 131px 134px;
   }
 }
 
