--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -14,13 +14,18 @@
   @media (min-width: @desktop-width) {
     position: relative;
     z-index: 3;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
     padding: 209px 0 123px;
     background-image: url("../../img/backgrounds/traveller-illustration-desktop.png"), url("../../img/backgrounds/globe-back-desktop.jpg");
     background-position: 60% 110px, 0 0;
     background-color: transparent;
+  }
+}
+
+.promo__wrapper {
+  @media (min-width: @desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
