--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -8,6 +8,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    max-width: 1440px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
