--- a/source/less/blocks/feedback.less
+++ b/source/less/blocks/feedback.less
@@ -1,14 +1,12 @@
 .feedback {
-  padding-top: 97px;
+  padding: 97px 25px 29px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 133px;
-    padding-bottom: 60px;
+    padding: 133px 36px 60px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 208px;
-    padding-bottom: 103px;
+    padding: 208px 75px 103px;
   }
 }
 
@@ -77,7 +75,6 @@
   margin-bottom: 0;
 
   @media (min-width: @tablet-width) {
-    padding: 0 35px;
     .fontsize(28px);
   }
 }
