--- a/source/less/blocks/top-bar.less
+++ b/source/less/blocks/top-bar.less
@@ -10,6 +10,9 @@
   }
 
   @media (min-width: @desktop-width) {
+    width: 1440px;
+    margin-right: auto;
+    margin-left: auto;
     padding: 46px 58px 0;
     background-color: transparent;
   }
