--- a/source/less/blocks/user-buttons.less
+++ b/source/less/blocks/user-buttons.less
@@ -37,3 +37,11 @@
 .user-buttons__item:active .user-buttons__icon {
   opacity: 0.3;
 }
+
+.user-buttons .button {
+  padding: 7px 40px 3px;
+
+  @media (min-width: @desktop-width) {
+    padding: 16px 28px 14px;
+  }
+}
