--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -9,9 +9,7 @@
   flex-wrap: wrap;
   box-sizing: border-box;
   width: 100%;
-  height: 100%;
   padding: 99px 25px 41px;
-  background-color: @white;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
@@ -22,11 +20,15 @@
   }
 
   @media (min-width: @desktop-width) {
+    position: relative;
     display: grid;
     grid-template-columns: 1fr min-content;
-    margin-top: -53px;
     padding: 0;
     background-color: transparent;
+  }
+
+  &--show {
+    background-color: @white;
   }
 }
 
@@ -59,6 +61,7 @@
 }
 
 .menu__navigation {
+  display: none;
   margin-bottom: 51px;
 
   @media (min-width: @tablet-width) {
@@ -66,6 +69,7 @@
   }
 
   @media (min-width: @desktop-width) {
+    display: block;
     order: unset;
     margin-bottom: 0;
     padding-left: 242px;
@@ -73,7 +77,12 @@
   }
 }
 
+.menu--show .menu__navigation {
+  display: block;
+}
+
 .menu__login {
+  display: none;
   margin-bottom: 51px;
 
   @media (min-width: @tablet-width) {
@@ -87,7 +96,12 @@
   }
 }
 
+.menu--show .menu__login {
+  display: block;
+}
+
 .menu__contacts {
+  display: none;
   margin-bottom: 41px;
 
   @media (min-width: @tablet-width) {
@@ -101,7 +115,13 @@
   }
 }
 
+.menu--show .menu__contacts {
+  display: block;
+}
+
 .menu__socials {
+  display: none;
+
   @media (min-width: @tablet-width) {
     order: 4;
     justify-content: flex-start;
@@ -114,14 +134,26 @@
   }
 }
 
+.menu--show .menu__socials {
+  display: flex;
+}
+
 .menu__user-buttons {
+  position: relative;
+  top: 355px;
+
   @media (min-width: @tablet-width) {
     display: none;
   }
 
   @media (min-width: @desktop-width) {
+    top: 0;
     display: grid;
   }
+}
+
+.menu--show .menu__user-buttons {
+  display: none;
 }
 
 /* Menu -- no JS */
@@ -130,6 +162,8 @@
   padding: 99px 0 41px;
 
   @media (min-width: @desktop-width) {
+    position: relative;
+    margin-top: -53px;
     padding: 0;
   }
 }
@@ -138,10 +172,38 @@
   display: none;
 }
 
+.menu--no-js .menu__navigation {
+  display: block;
+}
+
 .menu--no-js .menu__login {
   position: static;
+  display: block;
 
   @media (min-width: @tablet-width) {
     margin-top: -145px;
+  }
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.menu--no-js .menu__socials {
+  display: flex;
+
+  @media (min-width: @desktop-width) {
+    display: none;
+  }
+}
+
+.menu--no-js .menu__user-buttons {
+  top: 495px;
+  z-index: 2;
+  margin-bottom: -40px;
+
+  @media (min-width: @desktop-width) {
+    top: 0;
+    margin-bottom: 0;
   }
 }
