--- a/source/less/blocks/top-bar.less
+++ b/source/less/blocks/top-bar.less
@@ -3,7 +3,7 @@
   width: 100%;
   min-height: 73px;
   padding: 25px 25px 0;
-  background-color: @white;
+  // background-color: @white;
 
   @media (min-width: @tablet-width) {
     padding: 40px 40px 0;
@@ -15,6 +15,10 @@
     margin-left: auto;
     padding: 46px 58px 0;
     background-color: transparent;
+  }
+
+  &--no-js {
+    background-color: @white;
   }
 }
 
