Добавляет высоту контейнера карты на планшетах

--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -68,6 +68,10 @@
   overflow-x: hidden;
 
   @media (min-width: @desktop-width) {
+    height: 581px;
+  }
+
+  @media (min-width: @desktop-width) {
     height: 584px;
   }
 }
