Исправляет опечатки (спасибо линтеру)

--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -40,7 +40,7 @@
   align-self: flex-end;
   width: 19px;
   height: 19px;
-  background-image: url('../../img/ui/icon_menu_close.svg');
+  background-image: url("../../img/ui/icon_menu_close.svg");
   background-repeat: no-repeat;
   background-color: transparent;
   border: 0;
