Исправляет фон шапки и промо

--- a/source/less/blocks/top-bar.less
+++ b/source/less/blocks/top-bar.less
@@ -18,6 +18,10 @@
 
   &--no-js {
     background-color: @white;
+
+    @media (min-width: @desktop-width) {
+      background-color: transparent;
+    }
   }
 }
 
