--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -8,16 +8,15 @@
     padding: 162px 0 96px;
     background-image: url("../../img/backgrounds/traveller-illustration-tablet.png"), url("../../img/backgrounds/globe-back-tablet.jpg");
     background-position: 70% 404px, 0% 382px;
-    background-repeat: no-repeat, no-repeat;
   }
 
   @media (min-width: @desktop-width) {
     position: relative;
     z-index: 3;
-    padding: 209px 0 123px;
-    background-image: url("../../img/backgrounds/traveller-illustration-desktop.png"), url("../../img/backgrounds/globe-back-desktop.jpg");
-    background-position: 60% 110px, 0 0;
-    background-color: transparent;
+    padding: 0;
+    background-image: url("../../img/backgrounds/globe-back-desktop.png");
+    background-position: center top;
+    background-color: @basic-blue-other;
   }
 }
 
@@ -26,6 +25,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding: 209px 0 123px;
+    background-image: url("../../img/backgrounds/traveller-illustration-desktop.png");
+    background-position: 604px 110px;
+    background-repeat: no-repeat;
   }
 }
 
