--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,6 +1,6 @@
 .page-footer {
   position: relative;
-  z-index: 3;
+  z-index: @z-index-page-footer;
   margin-top: -25px;
   background-color: @white;
   border-radius: 25px 25px 0 0;
