--- a/source/less/blocks/top-bar.less
+++ b/source/less/blocks/top-bar.less
@@ -29,7 +29,7 @@
   position: fixed;
   top: 27px;
   left: 25px;
-  z-index: 5;
+  z-index: @z-index-top-bar-logo;
 
   @media (min-width: @tablet-width) {
     top: 45px;
