--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -34,3 +34,16 @@
 @mobile-width-only: 767px;
 @tablet-width: 768px;
 @desktop-width: 1440px;
+
+// Z-index
+@z-index-top-bar-logo: 5;
+@z-index-menu: 4;
+@z-index-menu-toggle: 3;
+@z-index-menu-nojs-user-buttons: 2;
+@z-index-page-main-dark: 2;
+@z-index-page-main-light: 3;
+@z-index-page-main-special: 1;
+@z-index-promo: 3;
+@z-index-address-container: 2;
+@z-index-address-map-container: 1;
+@z-index-page-footer: 3;
