--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -12,7 +12,7 @@
 
 .address__container {
   position: relative;
-  z-index: 2;
+  z-index: @z-index-address-container;
   background-color: @basic-yellow;
   border-radius: 25px;
 }
@@ -61,7 +61,7 @@
 
 .address__map-container {
   position: relative;
-  z-index: 1;
+  z-index: @z-index-address-map-container;
   margin-top: -25px;
   width: 100%;
   height: 328px;
