--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -12,7 +12,7 @@
 
   @media (min-width: @desktop-width) {
     position: relative;
-    z-index: 3;
+    z-index: @z-index-promo;
     padding: 0;
     background-image: url("../../img/backgrounds/globe-back-desktop.png");
     background-position: center top;
