--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -126,6 +126,15 @@
     text-transform: none;
   }
 
+  &--feedback-form {
+    border-radius: 0 20px 20px 0;
+
+    @media (min-width: @tablet-width) {
+      padding: 30px 36px 27px;
+      text-align: left;
+    }
+  }
+
   &--select {
     font-weight: 500;
     font-size: 14px;
