--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -64,6 +64,17 @@
 
     &:first-child {
       border-radius: 10px 0 0 0;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 99%;
+        display: block;
+        width: 15px;
+        height: 100%;
+        background-color: @special-orange;
+      }
     }
 
     &:nth-child(2) {
@@ -74,6 +85,17 @@
     &:nth-child(3) {
       top: 0;
       border-radius: 0 0 0 10px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 99%;
+        display: block;
+        width: 15px;
+        height: 100%;
+        background-color: @special-yellow-dark;
+      }
     }
 
     &:last-child {
@@ -101,6 +123,17 @@
     &:nth-child(2) {
       top: 0;
       border-radius: 10px 0 0 10px;
+
+      &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 99%;
+        display: block;
+        width: 15px;
+        height: 100%;
+        background-color: @special-orange-light;
+      }
     }
 
     &:nth-child(3) {
