Исправляет название переменной вьюпорта

--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -8,7 +8,7 @@
     grid-template-columns: 1fr 80px;
   }
 
-  @media (min-width: @tablet-width) {
+  @media (min-width: @desktop-width) {
     grid-template-columns: 1fr 330px;
   }
 }
