Добавляет недостающие блоки страницы формы

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -55,6 +55,7 @@
 
 // Blocks -- user profile block
 @import "blocks/user-profile.less";
+@import "blocks/info.less";
 
 // Blocks -- plans block
 @import "blocks/plans-list.less";
