Добавляет новые цвета и значения z-index в переменные

--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -23,6 +23,8 @@
 @special-grey: #444444;
 @special-grey-light: #F3F4F8;
 @special-grey-lightest: #F2F2F2;
+@special-grey-border: #CBCED9;
+@special-grey-border-other: #D6D9E6;
 @special-bluegrey: #E2E5F2;
 @special-red: #F47E7E;
 @special-red-saturated: #FF5C23;
@@ -47,3 +49,6 @@
 @z-index-address-container: 2;
 @z-index-address-map-container: 1;
 @z-index-page-footer: 3;
+@z-index-page-main-title-yellow: -1;
+@z-index-calendar-day-hover: 2;
+@z-index-country-choice-container: 2;
