Задает базовую сетку страницы формы

--- a/source/less/blocks/add-plan.less
+++ b/source/less/blocks/add-plan.less
@@ -1,5 +1,23 @@
+.add-plan {
+  position: relative;
+}
+
+.add-plan__title {
+  padding-right: 60px;
+}
+
+.add-plan__steps-tracker {
+  position: absolute;
+  top: 30px;
+  right: 43px;
+}
+
 .add-plan__steps {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+.add-plan__step:not(:last-child) {
+  margin-bottom: 10px;
 }
