--- a/source/less/blocks/info.less
+++ b/source/less/blocks/info.less
@@ -1,1 +1,9 @@
-// info block
+.info__button {
+  display: none;
+  margin-top: 18px;
+  cursor: pointer;
+}
+
+.info--no-js .info__button {
+  display: block;
+}
