--- a/source/less/blocks/user-buttons.less
+++ b/source/less/blocks/user-buttons.less
@@ -2,6 +2,10 @@
   display: grid;
   grid-template-columns: min-content min-content min-content;
   align-items: start;
+
+  &--inner {
+    display: none;
+  }
 }
 
 .user-buttons__item {
