--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -10,6 +10,7 @@
   text-align: center;
   color: @basic-blue;
   background-color: @basic-yellow;
+  border: 0;
   border-radius: 25px;
 
   &:hover {
@@ -136,10 +137,12 @@
   }
 
   &--select {
+    padding: 11px;
     font-weight: 500;
     font-size: 14px;
     line-height: 18px;
     background-color: @white;
+    border-radius: 4px;
 
     &:hover {
       background-color: @white;
@@ -149,6 +152,8 @@
   &--select-clicked {
     color: @white;
     background-color: @basic-blue-light;
+    border-color: @basic-blue-light;
+    border-radius: 4px 4px 0 0;
 
     &:hover {
       background-color: @basic-blue-light;
