--- a/source/less/blocks/descriptions.less
+++ b/source/less/blocks/descriptions.less
@@ -1,10 +1,19 @@
+.descriptions__item:not(:last-child) {
+  margin-bottom: 27px;
+}
+
 .descriptions__country {
+  display: inline-block;
+  margin-bottom: 13px;
   font-weight: 500;
   .fontsize(18px);
   color: @basic-blue-light;
 }
 
 .descriptions__textarea {
+  box-sizing: border-box;
+  width: 100%;
+  height: 220px;
   padding: 10px 14px;
   font-family: "Blogger Sans", "Tahoma", sans-serif;
   font-style: normal;
@@ -12,6 +21,9 @@
   font-size: 16px;
   line-height: 22px;
   color: fade(@special-grey, 30%);
+  border: 1px solid @special-grey-border;
+  border-radius: 4px;
+  resize: none;
 
   &:focus {
     color: @special-grey;
