--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -85,8 +85,24 @@
 }
 
 .page-main__title-container {
-  padding: 12px 25px;
+  position: relative;
+  box-sizing: border-box;
+  min-height: 143px;
+  padding: 95px 25px 12px;
   background-color: @basic-blue-inner;
+  border-radius: 0 0 25px 25px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    z-index: @z-index-page-main-title-yellow;
+    display: block;
+    width: 100%;
+    height: 30px;
+    background-color: @basic-yellow;
+  }
 }
 
 .page-main__title {
@@ -107,11 +123,30 @@
     line-height: 18px;
     text-transform: uppercase;
   }
+
+  &--main {
+    position: relative;
+    display: inline-block;
+
+    &::after {
+      content: "";
+      position: absolute;
+      bottom: -14px;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 5px;
+      background-color: @special-orange;
+      border-radius: 4px;
+    }
+  }
 }
 
 // Inner pages
 .page-main--inner .page-main__section {
+  margin-top: -25px;
   padding: 30px 25px 60px;
+  border-radius: 25px 25px 0 0;
 
   &:nth-of-type(2) {
     background-color: @special-blue-light;
@@ -123,7 +158,7 @@
 }
 
 .page-main--inner .page-main__title {
-  margin: 0;
+  margin: 0 0 29px;
   color: @basic-blue-light;
 
   &--main {
