--- a/source/less/blocks/step.less
+++ b/source/less/blocks/step.less
@@ -1,14 +1,25 @@
 .step {
   padding: 24px 25px 23px;
   background-color: @white;
+  border-radius: 10px;
 }
 
 .step__title {
+  margin: 0 0 16px;
   font-weight: 700;
   .fontsize(20px);
   color: @basic-blue-light;
 }
 
+.step__number {
+  display: block;
+}
+
 .step__description {
+  margin: 0 0 20px;
   font-weight: 400;
+}
+
+.step__fieldset:last-of-type {
+  margin-bottom: 25px;
 }
