Добавляет блок level-bar

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -51,6 +51,7 @@
 @import "blocks/flags-list.less";
 @import "blocks/transport-list.less";
 @import "blocks/level-badge.less";
+@import "blocks/level-bar.less";
 @import "blocks/companion-card.less";
 
 // Blocks -- user profile block
