--- a/source/less/global/variables.less
+++ b/source/less/global/variables.less
@@ -25,6 +25,7 @@
 @special-grey-lightest: #F2F2F2;
 @special-grey-border: #CBCED9;
 @special-grey-border-other: #D6D9E6;
+@special-grey-border-dark: #E1E3E9;
 @special-bluegrey: #E2E5F2;
 @special-red: #F47E7E;
 @special-red-saturated: #FF5C23;
