--- a/source/less/blocks/calendar.less
+++ b/source/less/blocks/calendar.less
@@ -13,6 +13,11 @@
   .fontsize(20px);
   color: @basic-blue-light;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 27px 0 23px;
+    .fontsize(36px);
+  }
 }
 
 .calendar__arrow {
@@ -26,15 +31,32 @@
   align-items: center;
   grid-template-rows: 32px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    grid-template-rows: 45px;
+  }
 }
 
 .calendar__weekday {
+  margin: 0;
   font-weight: 400;
   font-size: 14px;
   line-height: 18px;
 
+  @media (min-width: @tablet-width) {
+    .fontsize(18px);
+  }
+
   &--weekend {
     color: @special-red-saturated;
+  }
+}
+
+.calendar__weekday-letter {
+  display: none;
+
+  @media (min-width: @tablet-width) {
+    display: inline;
   }
 }
 
@@ -44,11 +66,16 @@
   align-items: center;
   grid-template-rows: 32px;
   text-align: center;
+
+  @media (min-width: @tablet-width) {
+    grid-template-rows: 69px;
+  }
 }
 
 .calendar__day {
+  box-sizing: border-box;
   padding: 8px;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 14px;
   line-height: 18px;
   text-align: center;
@@ -63,6 +90,11 @@
     color: @white;
     background-color: @basic-blue-light;
     outline: 2px solid @special-red-saturated;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding: 27px;
+    .fontsize(18px);
   }
 
   &--grey {
