--- a/source/less/blocks/level-bar.less
+++ b/source/less/blocks/level-bar.less
@@ -1,1 +1,19 @@
-// level-bar block
+.level-bar__progress {
+  &--companion-card {
+    cx: 30;
+    cy: 30;
+    r: 28;
+  }
+
+  &--user-profile {
+    cx: 50;
+    cy: 50;
+    r: 47;
+
+    @media (min-width: @tablet-width) {
+      cx: 47;
+      cy: 47;
+      r: 44;
+    }
+  }
+}
