--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -16,4 +16,11 @@
   @media (min-width: @desktop-width) {
     line-height: 34px;
   }
+
+  &--inner {
+    @media (min-width: @tablet-width) {
+      font-size: 20px;
+      line-height: 24px;
+    }
+  }
 }
