--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -103,6 +103,15 @@
     height: 30px;
     background-color: @basic-yellow;
   }
+
+  @media (min-width: @tablet-width) {
+    padding: 224px 75px 66px;
+    border-radius: 0 0 50px 50px;
+
+    &::before {
+      display: none;
+    }
+  }
 }
 
 .page-main__title {
@@ -155,14 +164,33 @@
   &:nth-of-type(3) {
     background-color: @special-steelblue-dark;
   }
+
+  @media (min-width: @tablet-width) {
+    padding: 57px 75px 114px;
+    border-radius: 30px 30px 0 0;
+  }
 }
 
 .page-main--inner .page-main__title {
   margin: 0 0 29px;
   color: @basic-blue-light;
 
+  @media (min-width: @tablet-width) {
+    margin-bottom: 56px;
+    .fontsize(36px);
+  }
+
   &--main {
     .fontsize(36px);
     color: @white;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 0;
+      .fontsize(60px);
+
+      &::after {
+        bottom: -68px;
+      }
+    }
   }
 }
