--- a/source/less/blocks/plans-list.less
+++ b/source/less/blocks/plans-list.less
@@ -17,10 +17,22 @@
     .fontsize(16px);
     color: @basic-blue-light;
   }
+
+  @media (min-width: @tablet-width) {
+    display: grid;
+    grid-template-areas: "title title title"
+      "companions dates edit";
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0;
+  }
 }
 
 .plans-list__item:not(:last-child) {
   margin-bottom: 10px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 11px;
+  }
 }
 
 .plans-list__title {
@@ -29,6 +41,16 @@
   font-weight: 700;
   .fontsize(16px);
   color: @basic-blue-light;
+
+  @media (min-width: @tablet-width) {
+    grid-area: title;
+    box-sizing: border-box;
+    width: 100%;
+    margin-bottom: 0;
+    padding: 40px 40px 34px;
+    .fontsize(24px);
+    border-bottom: 1px solid @special-grey-border;
+  }
 }
 
 .plans-list__details {
@@ -40,6 +62,29 @@
 
   &:last-of-type {
     margin-bottom: 24px;
+
+    @media (min-width: @tablet-width) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    box-sizing: border-box;
+    padding: 20px 10px 14px;
+    .fontsize(20px);
+    text-align: center;
+  }
+
+  &--companions {
+    @media (min-width: @tablet-width) {
+    grid-area: companions;
+    }
+  }
+
+  &--dates {
+    @media (min-width: @tablet-width) {
+    grid-area: dates;
+    }
   }
 }
 
@@ -59,5 +104,12 @@
 
   &:active {
     color: fade(@black, 10%);
+  }
+
+  @media (min-width: @tablet-width) {
+    grid-area: edit;
+    padding: 20px 10px 14px;
+    .fontsize(20px);
+    text-align: center;
   }
 }
