--- a/source/less/blocks/user-profile.less
+++ b/source/less/blocks/user-profile.less
@@ -6,18 +6,38 @@
   justify-items: center;
   row-gap: 18px;
   padding: 20px 25px 65px;
+
+  @media (min-width: @tablet-width) {
+    grid-template-areas: "badge empty empty avatar"
+      "button button button button"
+      "tags tags tags tags";
+    grid-template-columns: 164px 1fr 1fr 164px;
+    grid-row-gap: 51px;
+    padding: 66px 75px 86px;
+  }
 }
 
 .user-profile__badge {
   grid-area: badge;
   width: 100px;
   height: 100px;
+
+  @media (min-width: @tablet-width) {
+    width: 94px;
+    height: 94px;
+  }
 }
 
 .user-profile__avatar {
   grid-area: avatar;
   display: block;
   .circle(100px);
+
+  @media (min-width: @tablet-width) {
+    width: 94px;
+    height: 94px;
+    border-radius: 7px;
+  }
 }
 
 .user-profile__change-avatar {
