Убирает user-buttons на мобильных

--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -228,3 +228,10 @@
     top: -140px;
   }
 }
+
+// Inner pages
+.menu--inner-page .menu__user-buttons {
+  @media (max-width: 767px) {
+    display: none;
+  }
+}
