Добавляет блок планов

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -59,6 +59,7 @@
 @import "blocks/info.less";
 
 // Blocks -- plans block
+@import "blocks/plans.less";
 @import "blocks/plans-list.less";
 @import "blocks/steps-tracker.less";
 @import "blocks/add-plan.less";
